tests/codegen/fail/subscription/no_fields.rs
use coasys_juniper::graphql_subscription;

struct Obj;

#[graphql_subscription]
impl Obj {}

fn main() {}
